--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -34,3 +34,28 @@
 .aipca-outline p {
     margin: 0.8em 0;
 }
+
+/* full post related css */
+
+.aipca-full-post {
+    font-family: inherit;
+    line-height: 1.7;
+    color: #212529;
+}
+.aipca-full-post h2 {
+    font-size: 1.5em;
+    margin: 1.5em 0 0.5em;
+    color: #0d6efd;
+}
+.aipca-full-post h3 {
+    font-size: 1.2em;
+    margin: 1.2em 0 0.4em;
+    color: #333;
+}
+.aipca-full-post p {
+    margin-bottom: 1em;
+}
+.aipca-full-post ul {
+    margin-left: 20px;
+    list-style-type: disc;
+}
